modules/grammars/ide/src/test/resources/cocos/valid/OptionInheritTypeComponent.ide
package valid

typedef component configuration OptionInheritTypeComponent {
    option sub1: Common {
        label "Some Label"
        required true
    }

    option sub2: CommonBoolean {
        label "Some Label"
        required true
    }

    backend task main
}
