modules/grammars/ide/src/test/resources/cocos/invalid/OptionInheritTypeComponent.ide
package invalid

typedef component configuration OptionInheritTypeComponent {
    option sub1: Common {
        label "Some Label"
        required true
    }

    option sub2: CommonBoolean {
        label "Some Label"
        required true
    }

    frontend task main
}
